--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,18 @@
   })(window,document,'script','dataLayer','GTM-NLD9RXF');</script>
   <!-- End Google Tag Manager -->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/faviconWhite.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Twoja kariera w Teleperformance. Your career in Teleperformance. Poznaj Teleperformance i nasze oferty pracy. Meet Teleperformance and search jobs offers."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Teleperformance</title>
+    <title>Twoja kariera w Teleperformance</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
